enabled preview features