@@ -25,6 +25,16 @@ dependencies {
 
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
+}
+tasks.withType(Test).configureEach {
+    jvmArgs("--enable-preview")
+}
+
 test {
     useTestNG()
 }
